# harvest_plet

./: .gitignore  .readthedocs.yaml  codemeta.json  pyproject.toml  readme.md  requirements.txt
docs/: conf.py
docs/source/: API.rst  conf.py  index.rst  install.rst  test - Copy.rst  usage.rst
harvest_plet/: __init__.py  _config.py  assessment.yml  get_data.py  harvest_all.py  harvest_dataset.py  harvest_for_assessment.py  list_datasets.py  merge_files.py  opsar_comp.py  ospar_comp.py  plet.py
tests/: test_list_datasets.py  test_ospar_comp.py
