[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "harvest_plet"
authors = [{name = "Willem Boone", email = "willem.boone@vliz.be"}]
dynamic = ["version", "description"]

# Regular PyPI dependencies
dependencies = [
    "staticmap",
    "PyYAML",
    "requests == 2.31.0",
    "beautifulsoup4 == 4.12.3",
    "urllib3 == 2.0.7",
    "shapely == 2.0.3",
    "sphinx == 7.1.2",
    "sphinx-rtd-theme == 1.3.0rc1"
]


[project.optional-dependencies]
docs = [
    "sphinx == 7.1.2",
    "sphinx-rtd-theme == 1.3.0rc1"
]
tests = ["pytest"]