[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "harvest_plet"
authors = [{name = "Willem Boone", email = "willem.boone@vliz.be"}]
dynamic = ["version", "description"]

# Regular PyPI dependencies
dependencies = [
    "matplotlib",
    "staticmap",
    "PyYAML",
    "requests",
    "beautifulsoup4",
    "urllib3",
    "shapely",
    "sphinx == 7.1.2",
    "sphinx-rtd-theme == 1.3.0rc1"
]

[project.optional-dependencies]
docs = [
    "sphinx == 7.1.2",
    "sphinx-rtd-theme == 1.3.0rc1"
]
tests = ["pytest"]